--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Configurations
-title:            Jekyll Gitbook
+title:            InformaticApp
 longtitle:        Jekyll Gitbook
-author:           HE Tao
+author:           Jesús Brayan Coya Huiza
 email:            sighingnow@gmail.com
 description: >
   Build Jekyll site with the GitBook style.
